[build-system]
requires = [
  "flit_core>=3.2",
  "fastapi",
  "PyJWT"
]
build-backend = "flit_core.buildapi"

[project]
name = "auth-checker"
version = "1.0.0"
authors = [
  { name="Ryan Semmler", email="rsemmle@ncsu.edu" },
]
description = "Contains the AuthChecker class for apps using the Auth Service"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = [
  "fastapi",
  "PyJWT"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ncstate-sat/auth_checker"

[tool.flit.module]
name = "auth_checker"
